--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,12 +1,51 @@
-<html>
-<head>
-<title>Code Club</title>
-</head>
+  <div class="container">
+  <div class="div-spacer" style="background-color: #2e2e2e;"></div>
+  <nav class="navbar navbar-toggleable-md navbar-static-top bg-faded navbar-border">
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <a class="navbar-brand" href="#">CodeClub | Learn to code, make friends, build cool stuff</a>
+  <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+    <ul class="navbar-nav">
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          About Us
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="#">What is CodeClub?</a>
+          <a class="dropdown-item" href="#">Membership</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Contact Us</a>
+        </div>
+      </li>
+      <!--li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li-->
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Resources
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="https://www.meetup.com/codeclub/" target="_blank">Meetup page</a>
+          <a class="dropdown-item" href="#">Tools</a>
+          <a class="dropdown-item" href="#">Tutorials</a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Sign up &nbsp;|&nbsp; Login</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 
-<body>
-<h2>Hello World!</h2>
-<p>Welcome to Code Club.<br>
-  Est. 2017 in Berkeley, CA</p>
-</body>
-<p>For now, please keep up to date with the latest CodeClub news by visiting our <a href="https://www.meetup.com/codeclub/" target="_blank">Meetup page</a></p>
-</html>
+<div class="div-spacer"></div>
+
+<div class="div-body">
+  <h2>Hello World!</h2>
+  <p>Welcome to Code Club.<br>
+    Est. 2017 in Berkeley, CA</p>
+  </body>
+  <p>For now, please keep up to date with the latest CodeClub news by visiting our <a href="https://www.meetup.com/codeclub/" target="_blank">Meetup page</a></p>
+</div>
+<div class="div-footer"></div>
+</div>
