--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -41,8 +41,8 @@
 <div class="div-spacer"></div>
 
 <div class="div-body">
-  <h2>Hello World!</h2>
-  <p>Welcome to Code Club.<br>
+  <h2>Hello Berkeley!</h2>
+  <p>Welcome to CodeClub.<br>
     Est. 2017 in Berkeley, CA</p>
   </body>
   <p>For now, please keep up to date with the latest CodeClub news by visiting our <a href="https://www.meetup.com/codeclub/" target="_blank">Meetup page</a></p>
