--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -27,7 +27,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" href="https://www.meetup.com/codeclub/" target="_blank">Meetup page</a>
-          <a class="dropdown-item" href="#">Tools</a>
+          <a class="dropdown-item" href="https://github.com/codeclubsocial/" target="_blank">Github Repositories</a>
           <a class="dropdown-item" href="#">Tutorials</a>
         </div>
       </li>
