--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,13 @@
   </head>
 
   <body style="background-color: #2e2e2e;">
-    <%= yield %>
+    <div class="container">
+      <div class="div-spacer" style="background-color: #2e2e2e;"></div>
+        <%= render "navs/navbar" %>
+        <%= yield %>
+        <%= render "navs/footer" %>
+      <div class="div-footer"></div>
+    </div>
   </body>
 
   <!-- jQuery library -->
